--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "click>=8.0",
 ]
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "vpuhoff", email = "vpuhoff92@gmail.com"}
 ]
 keywords = ["backup", "yaml", "project", "restore", "cli"]
 classifiers = [
